Improve lincxmap sample detection, support multiple selector and update UI

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -69,7 +69,7 @@
             android:name=".android.app.DetectionResultActivity"
             android:label="@string/title_detection_result" />
         <activity
-            android:name=".android.app.MainActivity"
+            android:name=".android.app.DesktopActivity"
             android:label="@string/title_launcher"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
